# learnopengl

./: .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  learnopengl.sln
learnopengl/: camera.h  learnopengl.camera.vcxproj  learnopengl.vcxproj  main.cpp
learnopengl.camera/: camera.h  learnopengl.camera.vcxproj  learnopengl.camera.vcxproj.filters  main.cpp  makefile  shader.h
learnopengl.coordinatesystems/: learnopengl.coordinatesystems.vcxproj  main.cpp  shader.frag  shader.vert
learnopengl.hellotriangle/: CMakeLists.txt
learnopengl.shaders/: learnopengl.shaders.vcxproj  learnopengl.shaders.vcxproj.filters  main.cpp  shader.cpp  shader.frag  shader.h  shader.vs
learnopengl.textures/: learnopengl.textures.vcxproj  learnopengl.textures.vcxproj.filters  main.cpp  shader.frag  shader.vert  shader.vs
learnopengl.transformations/: learnopengl.transformations.vcxproj  learnopengl.transformations.vcxproj.filters  main.cpp  shader.cpp  shader.vert
